--- a/install
+++ b/install
@@ -3,7 +3,7 @@ if (php_sapi_name() !== 'cli') exit('It\'s no cli!');
 
 $config = dirname(dirname(dirname(__DIR__))).'/Config/Router.php';
 
-if(is_file($config)) return "\n--- Router configuration file already exists!\n";
+if(is_file($config)) return "\n--- Router configuration file already exists!";
 if(!is_dir(dirname($config))) return "\n\n--- Configuration file for Router not instaled!\n\n";
 
 $data = <<<'EOD'
@@ -88,4 +88,4 @@ EOD;
 
 file_put_contents($config, $data);
 
-return "\n\n--- Router instaled!\n\n";
+return "\n--- Router instaled!";
