--- a/install
+++ b/install
@@ -54,7 +54,12 @@ class Router
 }
 
 /* Samples:
-
+    
+        
+        $router->respond('get',  'about', 
+            function(){
+                \Lib\App::go('http://paulorocha.tk/devbr/about');
+            })
         ->respond('get|post', 'blog(/\d{4}(/\d{2}(/\d{2}(/[a-z0-9_-]+)?)?)?)?', 'blog1') //blog/2015/11/23/titulo_da_materia
         ->respond('get|post', 'blog(/\d{4}(/\d{2}(/\d{2}(.*)?)?)?)?', 'blog2') //blog/2015/11/23/qualquer coisa aqui
         ->respond('get|post', '/user/(\d+)/(\w+)', 'usuarioIdNome', 'index') //user/00234/Nome do cara
