--- a/install
+++ b/install
@@ -53,13 +53,32 @@ class Router
     }
 }
 
-/* Samples:
+/* Description:
+
+        $router->respond( <type>, <request>, <controller>, [<action>]);
+        
+            <type>:       A string with the following methods: "all", "get", "post", "delete", "put", "patch". 
+                          Or specify a specific group: "get|post|delete".
+                          
+            <request>:    String of the requested URI - ex.: "about/me" ==> http://site.com/about/me
+            
+            <controller>: Class (object) to manage the request. 
+                          Name must be a complete string, with NAMESPACE + CLASSNAME. Ex.: "Lib\User".
+                          Alternatively you can use the following format: "controller::action" - ex.: "Lib\User::login".                          
+                          The Controller can also be an anonymous function that receives (or not) 
+                          parameters of the regular expression in <request>. 
+                          Ex.: $router->respond('get', '/(*)', function($path){exit($path);});
+            
+            <action>:     Optional form to indicate an action. Ex.: "login"
     
+        
+        Other Samplers
+        ==============
         
         $router->respond('get',  'about', 
             function(){
                 \Lib\App::go('http://paulorocha.tk/devbr/about');
-            })
+            }) //redirect "http://site.com/about"
         ->respond('get|post', 'blog(/\d{4}(/\d{2}(/\d{2}(/[a-z0-9_-]+)?)?)?)?', 'blog1') //blog/2015/11/23/titulo_da_materia
         ->respond('get|post', 'blog(/\d{4}(/\d{2}(/\d{2}(.*)?)?)?)?', 'blog2') //blog/2015/11/23/qualquer coisa aqui
         ->respond('get|post', '/user/(\d+)/(\w+)', 'usuarioIdNome', 'index') //user/00234/Nome do cara
