--- a/install
+++ b/install
@@ -9,47 +9,36 @@ if(!is_dir(dirname($config))) return "\n\n--- Configuration file for Router not 
 $data = <<<'EOD'
 <?php
 /**
- * Router Configurations
- * @copyright   Bill Rocha - http://google.com/+BillRocha
- * @license     MIT
- * @author      Bill Rocha - prbr@ymail.com
- * @version     0.0.1
- * @package     Config
- * @access      public
- * @since       0.3.0
+ * Config\Router
+ * PHP version 7
  *
- * The MIT License
- *
- * Copyright 2015 http://google.com/+BillRocha.
- *
- * Permission is hereby granted, free of charge, to any person obtaining a copy
- * of this software and associated documentation files (the "Software"), to deal
- * in the Software without restriction, including without limitation the rights
- * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the Software is
- * furnished to do so, subject to the following conditions:
- *
- * The above copyright notice and this permission notice shall be included in
- * all copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
- * THE SOFTWARE.
+ * @category  Access
+ * @package   Config
+ * @author    Bill Rocha <prbr@ymail.com>
+ * @copyright 2016 Bill Rocha <http://google.com/+BillRocha>
+ * @license   <https://opensource.org/licenses/MIT> MIT
+ * @version   GIT: 0.0.2
+ * @link      http://paulorocha.tk/github/devbr
  */
 
 namespace Config;
 
+/**
+ * Config\Router Class
+ *
+ * @category Access
+ * @package  Config
+ * @author   Bill Rocha <prbr@ymail.com>
+ * @license  <https://opensource.org/licenses/MIT> MIT
+ * @link     http://paulorocha.tk/github/devbr
+ */
 class Router
 {
 
     function routers(&$router)
     {
         //Routes:
-        $router->respond('get',  '/',    'Site\Front::page');
+        $router->respond('get', '/', 'Site\Front::page');
     }
 }
 
