--- a/install
+++ b/install
@@ -37,8 +37,28 @@ class Router
 
     function routers(&$router)
     {
-        //Routes:
-        $router->respond('get', '/', 'Site\Front::page');
+        $router->respond('get', '/', 'Site\Front::page')
+               /*
+                  Considere a url:
+                    http://localhost/loja/903/Camisa Polo Marca XXX/ldfnld-n0p/+=dlknferçlkm/dsfdfdsjd//
+
+                    Captura:
+                        ['id'] => 903
+                        ['produto'] => Camisa Polo MArca XXX
+
+                    Ignora tudo mais...
+
+                    Veja a função "teste" da classe em "/.php/Site/Front.php"
+                    Segue a configuração da rota, abaixo:
+                */
+               ->respond('get', '/loja/(?<id>.*?)/(?<produto>[^/]*).*', 'Site\Front::test')
+               
+                /*  
+                    A mesma configuração, porém com parametros (índice) NUMÉRICOS:
+                    http://localhost/loja2/903/Camisa Polo Marca XXX/ldfnld-n0p/+=dlknferçlkm/dsfdfdsjd//
+                */
+                
+               ->respond('get', '/loja2/(.*?)/([^/]*).*', 'Site\Front::test');
     }
 }
 
