--- a/install
+++ b/install
@@ -34,7 +34,6 @@ namespace Config;
  */
 class Router
 {
-
     function routers(&$router)
     {
         $router->respond('get', '/', 'Site\Front::page')
@@ -53,12 +52,34 @@ class Router
                 */
                ->respond('get', '/loja/(?<id>.*?)/(?<produto>[^/]*).*', 'Site\Front::test')
                
-                /*  
+                /*
                     A mesma configuração, porém com parametros (índice) NUMÉRICOS:
                     http://localhost/loja2/903/Camisa Polo Marca XXX/ldfnld-n0p/+=dlknferçlkm/dsfdfdsjd//
                 */
                 
-               ->respond('get', '/loja2/(.*?)/([^/]*).*', 'Site\Front::test');
+               ->respond('get', '/loja2/(.*?)/([^/]*).*', 'Site\Front::test')
+
+               /*
+                    Usando uma função anônima diretamente na configuração do Router
+                    http://localhost/fac/categoria/pergunta
+                */
+               ->respond('get', '/fac/(.*?)/([^/]*).*',
+
+                            function ($type, $user) {
+                                echo '<h1>Função anônima</h1>
+                                      <p><b>Request URI:</b> '.$type.'<br>
+                                      <b>Parametros:</b><pre>'.print_r($user, true).'</pre></p>';
+                            })
+
+               /*
+                    Usando uma função anônima para mostrar uma página HTML ESTÁTICA
+                    http://localhost/about                    
+                */
+               ->respond('get', '/about',
+
+                            function () {
+                                include _HTML.'Static/about.html';
+                            });
     }
 }
 
@@ -80,44 +101,7 @@ class Router
                            -- if request "http://site.com/test/me", print in screen "test/me".
             
             <action>:     Optional form to indicate an action. Ex.: "login"
-    
-        
-        Other Samplers
-        ==============
-        
-        $router->respond('get',  'about', 
-            function(){
-                \Lib\App::go('http://paulorocha.tk/devbr/about');
-            }) //redirect "http://site.com/about"
-        ->respond('get|post', 'blog(/\d{4}(/\d{2}(/\d{2}(/[a-z0-9_-]+)?)?)?)?', 'blog1') //blog/2015/11/23/titulo_da_materia
-        ->respond('get|post', 'blog(/\d{4}(/\d{2}(/\d{2}(.*)?)?)?)?', 'blog2') //blog/2015/11/23/qualquer coisa aqui
-        ->respond('get|post', '/user/(\d+)/(\w+)', 'usuarioIdNome', 'index') //user/00234/Nome do cara
-        ->respond('get|post', '/user/(\d+)', 'usuarioId', 'index') //user/09005
-        ->respond('get|post', '/user/(\d+)/(\w+)/(\w+)', 'usuarioIdNomeESobrenome', 'index') //user/231/Paulo/Rocha
-        ->respond('get|post', '/user/(\d+)/(.*)', 'usuarioIdNomeCompleto', 'index')
-        ->respond('get|post', '/user', 'user', 'index') //user
-        ->respond('post', 'msg', 'msg')
-        
-        ->respond('post', 'sendmail/(.*[^<>()[\]\.,;:\s@\"])@(.*[^<>()[\]\.,;:\s@\"])\.(\w+)/(.*)', 'sendmail') //sendmail/prbr@ymail.com/23998  ((POST only)) call \Controller\Sendmail
-        
-        ->respond('post', 'upfile', 'upfile')
-        
-        ->respond('get|post', 'controller/(.*?)/(.*?)/(.*)', function($controller, $action, $params) {
-            echo'Controller: ' . $controller . '<br>Action: ' . $action . '<br>Params: ' . $params;
-            //after process, call controller/action
-            return ['controller' => $controller, 'action' => $action, 'params' => 'none'];
-        }) //controller/admin/index/values
-
-
-        ->respond('get|post', 'blogs(/\d{4}(/\d{2}(/\d{2}(/[a-z0-9_-]+)?)?)?)?', function($ano, $mes, $dia, $titulo) {
-            echo 'Ano: ' . $ano .
-            '<br>Mês: ' . $mes .
-            '<br>Dia: ' . $dia .
-            '<br>Título: ' . $titulo;
-            exit('<br>finish callback!');
-            //In this case, the CALLBACK call the Controller/Action or stop...
-        }); //Resolve with callback
-*/        
+*/
 EOD;
 
 file_put_contents($config, $data);
